style/style.css
*{ padding: 0; margin: 0; }

body {
    background-color: #222222;
}

#window {
    position: absolute;
    width: 780px;
    height: 470px;
    margin: auto;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

#window .cell {
    border: 1px #333 solid;
    float: left;
    width: 150px;
    height: 150px;

    /*background-color: #20213f;*/

    background-color: #231F20;


}

#window .cell.parent {
    border: 1px solid #dadada;
    border-radius:7px;
    box-shadow:0 0 10px #9ecaed;
}

#window .cell:hover {

    background-color: #414042;
    /*background-color: #F2F8FD;*/
    box-shadow:0 0 10px #9ecaed;
    cursor: pointer;
}

